fixes #5 and #4, added map for boxes and boxes should overlap the menu anymore

--- a/template/css/minimum/style.css
+++ b/template/css/minimum/style.css
@@ -78,7 +78,6 @@ height: 30px;
 cursor: pointer;
 border-right: 1px solid #353535;
 }
-
 .pppause { 
 display:none;
 position: absolute;
@@ -291,4 +290,14 @@ width: 80px;
 display: block;
 padding: 0px;
 background: url("start.png") no-repeat center center transparent;
+}
+
+.ppdisplay {
+    position: relative !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;    
 }
